<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SixFragment">



<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="240dp"
    android:background="@drawable/bg_view"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:ignore="MissingConstraints" >
</LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <androidx.cardview.widget.CardView
        android:layout_width="117dp"
        android:layout_height="123dp"

        app:cardElevation="21dp"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="@+id/cardView"
        app:layout_constraintStart_toStartOf="@+id/cardView"
        app:layout_constraintTop_toTopOf="@+id/cardView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
           >
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/profilephoto"
                android:contentDescription="@string/employerimage">

            </ImageView>


        </LinearLayout>



    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="334dp"
        android:layout_height="568dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="80dp"
        app:cardElevation="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.17"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="110dp"
                android:layout_marginTop="70dp"
                android:text="@string/person"
                android:textStyle="bold"
                android:textColor="@color/blue"
                android:textSize="20sp"
                 />

            <androidx.cardview.widget.CardView
                android:layout_width="116dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="10dp"
                android:layout_marginStart="110dp"
                android:layout_marginEnd="2dp"
                app:cardCornerRadius="20dp">

                <RelativeLayout
                    android:layout_width="126dp"
                    android:layout_height="wrap_content">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/employees_image"
                        android:layout_width="39dp"
                        android:layout_height="36dp"
                        android:layout_marginStart="2dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/person" />

                    <TextView
                        android:id="@+id/employees"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="-3dp"
                        android:layout_marginTop="25dp"
                        android:layout_toEndOf="@id/employees_image"
                        android:text="@string/employees"
                        android:textColor="@color/black"
                        android:textSize="12sp" />


                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginVertical="10dp"
                android:layout_marginHorizontal="10dp"
                app:cardCornerRadius="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/listImage1"
                        android:layout_width="44dp"
                        android:layout_height="44dp"
                        android:layout_marginStart="40dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/person" />

                    <TextView
                        android:layout_width="120dp"
                        android:layout_height="30dp"
                        android:id="@+id/listName1"
                        android:text="@string/myProfile"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:layout_marginTop="25dp"
                        android:layout_marginStart="30dp"
                        android:layout_toEndOf="@id/listImage1"/>



                </RelativeLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginVertical="10dp"
                android:layout_marginHorizontal="10dp"
                app:cardCornerRadius="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/listImage2"
                        android:layout_width="44dp"
                        android:layout_height="44dp"
                        android:layout_marginStart="40dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/settings" />

                    <TextView
                        android:layout_width="120dp"
                        android:layout_height="30dp"
                        android:id="@+id/listName2"
                        android:text="@string/settings"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:layout_marginTop="25dp"
                        android:layout_marginStart="30dp"
                        android:layout_toEndOf="@id/listImage2"/>



                </RelativeLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginVertical="10dp"
                android:layout_marginHorizontal="10dp"
                app:cardCornerRadius="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/listImage3"
                        android:layout_width="44dp"
                        android:layout_height="44dp"
                        android:layout_marginStart="40dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/logout" />

                    <TextView
                        android:layout_width="120dp"
                        android:layout_height="30dp"
                        android:id="@+id/listName3"
                        android:text="@string/logout"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:layout_marginTop="25dp"
                        android:layout_marginStart="30dp"
                        android:layout_toEndOf="@id/listImage3"/>



                </RelativeLayout>

            </androidx.cardview.widget.CardView>




        </LinearLayout>
        


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>